--- a/index1.html
+++ b/index1.html
@@ -45,6 +45,8 @@ href= "index1style.css" />
   <h2>Music</h2>
   <p class="about">The type of music I listen to is hard rock, metal, and 2000s R&B. Any other form of mainstream has to be mostly before
   2013. I am not a fan of today's music. No creativity or meaning.</p>
+    <p class="about">So my bands that I will fangirl about are <em>Three Days Grace, Escape the Fate,</em> and <em>Motionless In White
+    </em>. By the way, I am referring to the ORIGINAL <em>Three Days Grace</em>, with Adam Gontier. Not Matt Walst.... grrrrr...</p>
   <h2>Drink</h2>
   <p class="about">Orange Soda</p>
   <h2>Snack</h2>
@@ -61,6 +63,13 @@ href= "index1style.css" />
   <p class="about">I am sorry, but I cannot answer that if you expect a single favorite show. I have a ton and I can't list them from my
     top favorite to just plain favorite. So in no particular order: <em>Three's Company, I Love Lucy, Newhart, Cybill, Criminal Minds,
     Everybody Loves Raymond</em>, and <em>Monk</em>.</p>
+  <h2>Plant</h2>
+  <p class="about">CACTIIII!!!! They're sp friendly they way they always manage to wave hi. !HOW!</p>
+  <h2>Youtuber</h2>
+  <p class="about">CHEALYTHENINJA!!!! Oh goth, if it weren't for my best friend and her introducing me to <em>Motionless In White</em>, 
+    I would have never discovered him. His real name is James Cheal and he is currently in a band, <em>The Mechanist</em> and it is great!
+    When he actually followed me on Instagram and replied to a comment I made towards his soon release of his full EP, I felt like he 
+    breathed life into my soul... So yeah, I was fangirling pretty hard.</p>
   
 </aside>
   
