--- a/index1.html
+++ b/index1.html
@@ -67,7 +67,7 @@ href= "index1style.css" />
   <p class="about">CACTIIII!!!! They're sp friendly they way they always manage to wave hi. !HOW!</p>
   <h2>Youtuber</h2>
   <p class="about">CHEALYTHENINJA!!!! Oh goth, if it weren't for my best friend and her introducing me to <em>Motionless In White</em>, 
-    I would have never discovered him. His real name is James Cheal and he is currently in a band, <em>The Mechanist</em> and it is great!
+    I would have never discovered him. His real name is James Cheal and he is currently in a band as the lead vocalist, <em>The Mechanist</em> and it is great!
     When he actually followed me on Instagram and replied to a comment I made towards his soon release of his full EP, I felt like he 
     breathed life into my soul... So yeah, I was fangirling pretty hard.</p>
   
