--- a/index1.html
+++ b/index1.html
@@ -38,7 +38,7 @@ href= "index1style.css" />
   
   <h1>Favorite:</h1>
   <h2>Color</h2>
-  <p class="about">Black</p>
+  <p class="about">Black... of course..</p>
   <h2>Animal</h2>
   <p class="about">Penguin- Not only are they cute and cuddley, but they also happen to be very persistent and have strong instincts. 
     They also nurture their young, which is their priority.</p>
@@ -48,9 +48,9 @@ href= "index1style.css" />
     <p class="about">So my bands that I will fangirl about are <em>Three Days Grace, Escape the Fate,</em> and <em>Motionless In White
     </em>. By the way, I am referring to the ORIGINAL <em>Three Days Grace</em>, with Adam Gontier. Not Matt Walst.... grrrrr...</p>
   <h2>Drink</h2>
-  <p class="about">Orange Soda</p>
+  <p class="about">Orange Sodaaaaa... I could definitely go for that right now... *sighs heavily*</p>
   <h2>Snack</h2>
-  <p class="about"> I have a strong passion for Hot Cheetos.</p>
+  <p class="about"> I have a strong passion for Hot Cheetos. Trust me, I am not lying or exaggerating.</p>
   <h2>Food</h2>
   <p class="about">Spaghetti. Mmm, spaghetti.</p>
   <h2>Book</h2>
