--- a/index1.html
+++ b/index1.html
@@ -42,7 +42,7 @@ href= "index1style.css" />
   <h2>Animal</h2>
   <p class="about">Penguin- Not only are they cute and cuddley, but they also happen to be very persistent and have strong instincts. 
     They also nurture their young, which is their priority.</p>
-  <h2>Music</h2>
+    <h2><a href="music.html">Music</a></h2>
   <p class="about">The type of music I listen to is hard rock, metal, and 2000s R&B. Any other form of mainstream has to be mostly before
   2013. I am not a fan of today's music. No creativity or meaning.</p>
     <p class="about">So my bands that I will fangirl about are <em>Three Days Grace, Escape the Fate,</em> and <em>Motionless In White
