--- a/music.html
+++ b/music.html
@@ -26,8 +26,12 @@ href= "musicstyle.css" />
 
 <main>
 
-<img src="tdg." alt="">
-<img src=""alt="">
+<img src="tdg.JPG" alt="Three Days Grace">
+  <p>Three Days Grace</p>
+<img src="miw.jpg" alt="Motionless In White">
+  <p>Motionless In White</p>
+<img src="etf.jpg" alt="Escape the Fate">  
+  <p>Escape the Fate</p>
 
 </main>
 
