--- a/music.html
+++ b/music.html
@@ -18,19 +18,19 @@ href= "musicstyle.css" />
 
 <nav>
   <ul>
-    <li><a href="finalproject.html">Home</a></li>
-    <li><a href="index1.html">About</a></li>
+    <li><a href="index1.html">Back</a></li>
+    <li><a href="finalproject.html">Home</a></li>   
     <li><a href="index2.html">Topic</a></li>
   </ul>
 </nav>
 
 <main>
 
-<img src="tdg.JPG" alt="Three Days Grace">
+<img src="webpage/tdg.JPG" alt="Three Days Grace">
   <p>Three Days Grace</p>
-<img src="miw.jpg" alt="Motionless In White">
+<img src="webpage/miw.jpg" alt="Motionless In White">
   <p>Motionless In White</p>
-<img src="etf.jpg" alt="Escape the Fate">  
+<img src="webpage/etf.jpg" alt="Escape the Fate">  
   <p>Escape the Fate</p>
 
 </main>
