--- a/tvshows.html
+++ b/tvshows.html
@@ -48,7 +48,7 @@ href= "tvstyle.css" />
   <img src="webpage/newhart.jpg" alt="Newhart">
   <h2>Newhart</h2>
   
-  <img src="webpage/threesompany.jpg" alt="Three's Company">
+  <img src="webpage/threescompany.jpg" alt="Three's Company">
   <h2>Three's Company</h2>
   
 </main>
