--- a/index1.html
+++ b/index1.html
@@ -49,7 +49,7 @@ href= "index1style.css" />
     </em>. By the way, I am referring to the ORIGINAL <em>Three Days Grace</em>, with Adam Gontier. Not Matt Walst.... grrrrr...</p>
   <h2>Drink</h2>
   <p class="about">Orange Sodaaaaa... I could definitely go for that right now... *sighs heavily*</p>
-  <h2>Snack</h2>
+    <h2><a href="snack.html">Snack</a></h2>
   <p class="about"> I have a strong passion for Hot Cheetos. Trust me, I am not lying or exaggerating.</p>
   <h2>Food</h2>
   <p class="about">Spaghetti. Mmm, spaghetti.</p>
