--- a/snack.html
+++ b/snack.html
@@ -26,7 +26,7 @@ href= "index1style.css" />
   
 <main>
 
-<img src="hotcheetos.jpg" alt="Hot Cheetos">
+<img src="webpage/hotcheetos.jpg" alt="Hot Cheetos">
 <h3>Hot Cheetos</h3>
 
 </main>
