--- a/snack.html
+++ b/snack.html
@@ -30,6 +30,11 @@ href= "index1style.css" />
 <h3>Hot Cheetos</h3>
 
 </main>
+  
+<footer>
+  <p>Posted by: Natalie Jimenez</p>
+  <p>&copy;Jimenez Copyright Text</p>
+</footer>
 
 </body>
 
