--- a/tvshows.html
+++ b/tvshows.html
@@ -52,6 +52,11 @@ href="tvstyle.css" />
   <h3>Three's Company</h3>
   
 </main>
+  
+ <footer>
+    <p>Posted by: Natalie Jimenez</p>
+    <p>&copy;Jimenez Copyright Text</p>
+ </footer>  
 
 </body>
 
