--- a/index2.html
+++ b/index2.html
@@ -116,7 +116,7 @@ href= "index2style.css" />
     <h3>The Blackening</h3>
     <p><cite>Natalie Jimenez</cite></p>
     <br>  
-    <p><em>The day was calm, the the night- a storm</em></p>
+    <p><em>The day was calm, then the night- a storm</em></p>
     <p><em>The wind blew, the rain fell</em></p>
     <p><em>It poured all night, until morning came</em></p>
     <p><em>Yet the day was darker than last night</em></p>
