--- a/finalproject.html
+++ b/finalproject.html
@@ -47,7 +47,7 @@ href= "finalprojectstyle.css" />
     classes together, but I would still see him around. My 3rd period class was peer tutoring, and for the first 3 days the peer tutors
     sat in the library without a thing to do. So I dropped the class and that messed with my schedule. I wanted to keep my old schedule,
     but I had to find a class to fill in for 3rd. I asked around and hardly got any persuasive ideas. Then I asked Andrew and he 
-    informed me about the STEM class that I, honeslty, did not know this school offered. He told me that I should join and he would make 
+    informed me about the STEM class that, honeslty,I did not know this school offered. He told me that I should join and he would make 
     sure I pass the class. And with that, I found myself in the counselor's room asking for this class to fill for my 3rd period.</p>
  </aside> 
   
