--- a/index1.html
+++ b/index1.html
@@ -64,7 +64,7 @@ href= "index1style.css" />
     top favorite to just plain favorite. So in no particular order: <em>Three's Company, I Love Lucy, Newhart, Cybill, Criminal Minds,
     Everybody Loves Raymond</em>, and <em>Monk</em>.</p>
   <h2>Plant</h2>
-  <p class="about">CACTIIII!!!! They're sp friendly they way they always manage to wave hi. !HOW!</p>
+  <p class="about">CACTIIII!!!! They're so friendly they way they always manage to wave hi. !HOW!</p>
   <h2>Youtuber</h2>
   <p class="about">CHEALYTHENINJA!!!! Oh goth, if it weren't for my best friend and her introducing me to <em>Motionless In White</em>, 
     I would have never discovered him. His real name is James Cheal and he is currently in a band as the lead vocalist, <em>The Mechanist</em> and it is great!
