--- a/music.html
+++ b/music.html
@@ -14,6 +14,7 @@ href= "musicstyle.css" />
 <body>
 
 <header>
+  <title>Music</title>
 </header>
 
 <nav>
@@ -27,11 +28,11 @@ href= "musicstyle.css" />
 <main>
 
 <img src="webpage/tdg.JPG" alt="Three Days Grace">
-  <p>Three Days Grace</p>
+  <h2>Three Days Grace</h2>
 <img src="webpage/miw.jpg" alt="Motionless In White">
-  <p>Motionless In White</p>
+  <h2>Motionless In White</h2>
 <img src="webpage/etf.jpg" alt="Escape the Fate">  
-  <p>Escape the Fate</p>
+  <h2>Escape the Fate</h2>
 
 </main>
 
